--- a/Repetition_Exercise.ipynb
+++ b/Repetition_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDWncB3hFEktui41mE3R7i",
+      "authorship_tag": "ABX9TyPwuvmAka8OsGM1XHnEYXoa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q4**: There is a bug in the code below and the loop won't stop. Fill in the blank so that the loop will stop eventually."
+        "**Q4**: Fill in the blank so that the loop will stop eventually."
       ],
       "metadata": {
         "id": "-NyktGb-vqy7"
