--- a/Repetition_Exercise.ipynb
+++ b/Repetition_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwuvmAka8OsGM1XHnEYXoa",
+      "authorship_tag": "ABX9TyMcxkjhLdY47angpgMFHoi8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,34 +125,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q5**: Calculate the average\n",
-        "\n",
-        "Write a program to calculate the average of a given list below.\n",
-        "\n",
-        "The average is the sum of all numbers in the sequence divided by the total number,\n",
-        "$\\frac{1}{n}\\sum_i^n x_i$, where $x$ is a sequence of $n$ numbers."
-      ],
-      "metadata": {
-        "id": "unNFkKMDvrTq"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data = [10,20,31,23,54,71,19,32,29]  # the mean should be 32.11...\n",
-        "n = len(data)                        # len() is a function to determine the length of the list. We will talk about this tomorrow.\n",
-        "# Fill in your code here\n"
-      ],
-      "metadata": {
-        "id": "ntrqhhoLvrix"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Q6**: Calculate sum from the user's input\n",
+        "**Q5**: Calculate sum from the user's input\n",
         "\n",
         "Write a program that repeatedly prompts a user for integer numbers until the user enters -999999.\n",
         "\n",
@@ -185,7 +158,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q7**: Divisible sequence\n",
+        "**Q6**: Divisible sequence\n",
         "\n",
         "Write a program that take in two numbers $n$ and $m$ from a user. <br> Then print out a sequence of numbers from 1 to $n$ separated by commas. <br> If a number in the sequence is divisible by $m$, print 'D' instead.\n",
         "\n",
@@ -218,6 +191,40 @@
       "source": [],
       "metadata": {
         "id": "sW2BmPiavxBq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q7**: Calculate variance\n",
+        "\n",
+        "You are given a list of numbers. Your task is to calculate the variance of the list using the following formula\n",
+        "\n",
+        "$var = \\frac{1}{n}\\sum_i^nx_i^2 - \\mu^2$, where $x$ is the list of numbers, $n$ is the length of the list, and $\\mu$ is the mean of the list, $\\mu = \\frac{\\sum_i^nx_i}{n}$.\n",
+        "\n",
+        "**Hint:** separate the calculation into two parts (two loops)"
+      ],
+      "metadata": {
+        "id": "KoVT5pFzFmKj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# simply use these test_list below to test use your code\n",
+        "# Comment out to test other lists\n",
+        "test_list = [1,2,3,4,5]            # The answer is 2\n",
+        "# test_list = [1,1,1,1,1]          # The answer is 0\n",
+        "# test_list = [9,1,4,12,0,-2,4,8]  # The answer is 20.5\n",
+        "\n",
+        "n = len(test_list)                 # This return the length of a list.\n",
+        "\n",
+        "# Your code below\n"
+      ],
+      "metadata": {
+        "id": "p38gz7AtFmY1"
       },
       "execution_count": null,
       "outputs": []
