--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnwqlChNbAPUSzAsw9khiT",
+      "authorship_tag": "ABX9TyMo22iFle2GwSWW4VZLf4jX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -447,13 +447,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q13**: Calculate variance\n",
+        "**Q13**: Calculate variance Ver 2\n",
         "\n",
         "You are given a list of numbers. Your task is to calculate the variance of the list using the following formula\n",
         "\n",
-        "$var = \\frac{1}{n}\\sum_i^nx_i^2 - \\mu^2$, where $x$ is the list of numbers, $n$ is the length of the list, and $\\mu$ is the mean of the list, $\\mu = \\frac{\\sum_i^nx_i}{n}$.\n",
+        "$var = \\frac{∑_i(x_i - \\mu)^2}{n}$,\n",
         "\n",
-        "**Hint:** separate the calculation into two parts (two loops)"
+        "where $\\mu$ is the mean $\\mu = \\frac{1}{n}\\sum_ix_i$.\n",
+        "\n",
+        "**Hint:** separate the calculation into two parts (two loops)\n"
       ],
       "metadata": {
         "id": "IWXuPB5h88TC"
