--- a/Repetition_Exercise.ipynb
+++ b/Repetition_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcxkjhLdY47angpgMFHoi8",
+      "authorship_tag": "ABX9TyPiwKRpBH0KNbnNt4r9tqu9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,7 +204,7 @@
         "\n",
         "$var = \\frac{1}{n}\\sum_i^nx_i^2 - \\mu^2$, where $x$ is the list of numbers, $n$ is the length of the list, and $\\mu$ is the mean of the list, $\\mu = \\frac{\\sum_i^nx_i}{n}$.\n",
         "\n",
-        "**Hint:** separate the calculation into two parts (two loops)"
+        "**Hint:** separate the calculation into two parts (two loops): the sum of square and the square of mean. Then subtract them at the en"
       ],
       "metadata": {
         "id": "KoVT5pFzFmKj"
