--- a/List_Exercise.ipynb
+++ b/List_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2XCr1DEGWe+CIH83fzfpo",
+      "authorship_tag": "ABX9TyPwNcq73EPltGDfLAKSQQK5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
         "my_list = [1, 2, 3, 4, 5]\n",
         "my_list[0] = 'A'\n",
         "my_list[3] = 'Z'\n",
+        "print(my_list)\n",
         "```"
       ],
       "metadata": {
