--- a/String_and_Dict_Exercise.ipynb
+++ b/String_and_Dict_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOo8EILXrqoi1H398KUtMvZ",
+      "authorship_tag": "ABX9TyNJLQmABw7jHKkwirquOk3y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,7 +231,7 @@
         "\n",
         "\n",
         "\n",
-        "# Code to find the most frequent word\n",
+        "# Code to find the most frequent word (No need to change anything below)\n",
         "most_word = \"\"\n",
         "max_count = 0\n",
         "for key in my_dict:\n",
