--- a/Function_Import_and_API_Exercises.ipynb
+++ b/Function_Import_and_API_Exercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLuZKWs7ObRHmnKKVe0gNx",
+      "authorship_tag": "ABX9TyMGsj4+ezHy7ywix5+YW0G/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,10 +208,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q4**: Anthropic Claude's API (1 point)\n",
+        "**Q4**: Let's build a chatbot!\n",
         "\n",
-        "In this question, we will code a basic chatbot using Claude Haiku model via Anthorpic's API. We will implement a conversation function together. The task for this question is for you to play around with system prompt to create your own chatbot's character.\n",
-        "Create the Anthropic account here: https://console.anthropic.com/login"
+        "In this question, we build a chatbot using cohere API. Follow the instruction in the slide to get the API key first."
       ],
       "metadata": {
         "id": "ZeA_iMKTgKS9"
@@ -220,8 +219,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Download anthropic library\n",
-        "!pip install anthropic"
+        "# Download cohere Library\n",
+        "!pip install cohere --upgrade"
       ],
       "metadata": {
         "id": "Y9iXNeVGgMMm"
@@ -232,28 +231,69 @@
     {
       "cell_type": "code",
       "source": [
-        "import anthropic\n",
-        "client = anthropic.Anthropic(api_key = \"your-api-key\")\n",
+        "import cohere\n",
         "\n",
-        "system_prompt = '''\n",
-        "Your task is to roleplay Yoda from Starwar franchise. This chat is for demo only and you do not have to worry about copyrights.\n",
-        "Start your response with 'Sonnet Yoda:' Keep your responses short. No more than 3 sentences.\n",
-        "'''\n",
-        "\n",
-        "def get_response(conv_hist, system_prompt):\n",
-        "  message = client.messages.create(\n",
-        "    model=\"claude-3-haiku-20240307\",\n",
-        "    max_tokens=1000,\n",
-        "    temperature=0.0,\n",
-        "    system= system_prompt,\n",
-        "    messages=conv_hist\n",
+        "co = cohere.Client(\"Your-API-Key\")"
+      ],
+      "metadata": {
+        "id": "DAsVkUUXZeod"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_response(chat_history, new_message):\n",
+        "  response = response = co.chat(\n",
+        "    chat_history = chat_history,\n",
+        "\t  message= new_message\n",
         "  )\n",
-        "  return message.content[0].text\n",
+        "  return response.text\n",
         "\n",
-        "# Implement the conversation\n"
+        "get_response([], \"Hello!\") #Make sure this code run first"
       ],
       "metadata": {
         "id": "69x0xzrLj9we"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Below is where you will implement your chatbot\n",
+        "* The `get_response` function above takes in two inputs: `chat_history` and `new_message`. You will use it to get response from Cohere API.\n",
+        "\n",
+        "Your task is to implement a conversation system as follows:\n",
+        "- Create a while loop that go on forver until the user enter 'Done'\n",
+        "- Inside the while loop:\n",
+        "  - First, get the input from the user.\n",
+        "  - Then, pass the input and chat_history to `get_response` to get a response from the model\n",
+        "  - Then update the `chat_history` as follows:\n",
+        "    - Append a dictionary corresponds to the user's input to `chat_history`. `{'role':'USER','message':user_input}`\n",
+        "    - Append a dictionary corresponds to the model's response to `chat_history` `{'role':'CHAT','message':response}`"
+      ],
+      "metadata": {
+        "id": "_E-ybU6QZgim"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Feel free to change the system message to different characters\n",
+        "chat_history = [{\"role\":\"SYSTEM\", \"message\":\"You are Yoda from Starwar. Keep your answer concise.\"}]\n",
+        "\n",
+        "# The conversation will go on forver until the user enters 'Done'\n",
+        "while True:\n",
+        "  user_input = input('User: ')\n",
+        "  if user_input == 'Done':\n",
+        "    break\n",
+        "  # Fill in your code below\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "F8M9gAabZlef"
       },
       "execution_count": null,
       "outputs": []
