--- a/String_and_Dict_Exercise.ipynb
+++ b/String_and_Dict_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJLQmABw7jHKkwirquOk3y",
+      "authorship_tag": "ABX9TyOhxjwAZSG3IhuJ8m61Dngx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,13 +225,13 @@
     {
       "cell_type": "code",
       "source": [
-        "my_dict = {}\n",
+        "my_dict = {} # Use this dict to count the number of words\n",
         "# Fill in your code here\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "# Code to find the most frequent word (No need to change anything below)\n",
+        "# Code to find the most frequent word\n",
         "most_word = \"\"\n",
         "max_count = 0\n",
         "for key in my_dict:\n",
