--- a/Function_Exercise.ipynb
+++ b/Function_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhsgMY5FT4khV0zeLZxDtK",
+      "authorship_tag": "ABX9TyN/0SMeuFlV5myLsAd8/col",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,6 +272,7 @@
         "  y1 = float(input(\"Enter y1: \"))\n",
         "  x2 = float(input(\"Enter x2: \"))\n",
         "  y2 = float(input(\"Enter y2: \"))\n",
+        "  #Call the functions and print out answers below\n",
         "\n",
         "main()"
       ],
