--- a/Function_Import_and_API_Exercises.ipynb
+++ b/Function_Import_and_API_Exercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGsj4+ezHy7ywix5+YW0G/",
+      "authorship_tag": "ABX9TyMQP+mO5F7OFnJ8mNW/VnbI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q1**: Generate a list of random numbers (1 point)\n",
+        "**Q1**: Generate a list of random numbers\n",
         "\n",
         "Implement a program to randomly generate a list of random numbers between 1 and 10 (inclusive).\n",
         "\n",
@@ -84,7 +84,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q2**: Cone's surface area (1 point)\n",
+        "**Q2**: Cone's surface area\n",
         "\n",
         "Implement a function to calculate the surface area of a cone. The formula is $\\text{surface_area} = πr^2 + πrs$, where $r$ is the cone's radius and $s$ is the cone's slant height.\n",
         "\n",
@@ -138,7 +138,55 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q3**: Dice Simulation (2 point)\n",
+        "**Q3**: sin(a+b)\n",
+        "\n",
+        "Implement a function, `sin_a_plus_b`, that takes in two real numbers, a and b, and calculate sin(a+b). The formula is $sin(a+b) = sin(a) cos(b) + cos(a)sin(b)$.\n",
+        "\n",
+        "**Input**:\n",
+        "- $a$ a real number (radian).\n",
+        "- $b$ a real number (radian).\n",
+        "\n",
+        "**Output**:\n",
+        "- One number in two decimal places\n",
+        "\n",
+        "Example 1:\n",
+        "```\n",
+        "Enter a: 1\n",
+        "Enter b: 1\n",
+        "sin(1.0 + 1.0) = 0.91\n",
+        "```\n",
+        "\n",
+        "Example 2:\n",
+        "```\n",
+        "Enter a: 0.785\n",
+        "Enter b: 0.523\n",
+        "sin(0.785 + 0.523) = 0.97\n",
+        "```\n",
+        "\n",
+        "Example 3:\n",
+        "```\n",
+        "Enter a: 3.14\n",
+        "Enter b: 0\n",
+        "sin(3.14 + 0.0) = 0.00\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "9gRoerrT3srV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "q0fVHhCQ3s9y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q4**: Dice Simulation\n",
         "\n",
         "In this problem, we will write a program to simulate dice rolls. For each experiment, the prgram will roll $n$ dices and then calculate the average of outcomes. The program will repeat this experiment $m$ times and print out the result for each experiment.  \n",
         "\n",
@@ -190,6 +238,7 @@
         "  # Simulates n dice rolls and returns the average of the outcomes.\n",
         "  # Fill in your code below\n",
         "\n",
+        "\n",
         "def main():\n",
         "  seed = int(input(\"Enter seed: \"))\n",
         "  random.seed(seed)\n",
@@ -208,7 +257,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q4**: Let's build a chatbot!\n",
+        "**Q5**: Let's build a chatbot!\n",
         "\n",
         "In this question, we build a chatbot using cohere API. Follow the instruction in the slide to get the API key first."
       ],
@@ -262,6 +311,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Make sure you run all the code blocks above before doing the rest**\n",
+        "\n",
         "Below is where you will implement your chatbot\n",
         "* The `get_response` function above takes in two inputs: `chat_history` and `new_message`. You will use it to get response from Cohere API.\n",
         "\n",
