--- a/Function_Import_and_API_Exercises.ipynb
+++ b/Function_Import_and_API_Exercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQP+mO5F7OFnJ8mNW/VnbI",
+      "authorship_tag": "ABX9TyMl1NR35Z3lxK2yh0+xSgW9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -323,7 +323,7 @@
         "  - Then, pass the input and chat_history to `get_response` to get a response from the model\n",
         "  - Then update the `chat_history` as follows:\n",
         "    - Append a dictionary corresponds to the user's input to `chat_history`. `{'role':'USER','message':user_input}`\n",
-        "    - Append a dictionary corresponds to the model's response to `chat_history` `{'role':'CHAT','message':response}`"
+        "    - Append a dictionary corresponds to the model's response to `chat_history` `{'role':'CHATBOT','message':response}`"
       ],
       "metadata": {
         "id": "_E-ybU6QZgim"
@@ -333,7 +333,8 @@
       "cell_type": "code",
       "source": [
         "# Feel free to change the system message to different characters\n",
-        "chat_history = [{\"role\":\"SYSTEM\", \"message\":\"You are Yoda from Starwar. Keep your answer concise.\"}]\n",
+        "system_message = \"You are Yoda from Starwar. Keep your answer concise.\" #\n",
+        "chat_history = [{\"role\":\"SYSTEM\", \"message\":system_message}]\n",
         "\n",
         "# The conversation will go on forver until the user enters 'Done'\n",
         "while True:\n",
