--- a/Lab_2.ipynb
+++ b/Lab_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVmytZr1Dc/GHlfd0ytEqc",
+      "authorship_tag": "ABX9TyM6oVSMe7173wa28LBl8mGg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q1**: Fill in the blank below so that the program print out ``12``."
+        "**Q1**: Fill in the blank below so that the program prints out ``12``."
       ],
       "metadata": {
         "id": "rCO8mu4WRsJ_"
@@ -53,7 +53,7 @@
       "cell_type": "markdown",
       "source": [
         "**Q2**:\n",
-        "Fill in the blank below so that the program print out $\\texttt{[1, 3, 5, 5, 9, 9]}$"
+        "Fill in the blank below so that the program prints out $\\texttt{[1, 3, 5, 5, 9, 9]}$"
       ],
       "metadata": {
         "id": "C_fvOGgwJ3Ye"
@@ -77,7 +77,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q3**: Fill in the blank below so that the program print out \"ABG\""
+        "**Q3**: Fill in the blank below so that the program prints out \"ABCG\""
       ],
       "metadata": {
         "id": "NBaw9XjbQfau"
@@ -99,7 +99,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q4**: Fill in the blank below so that the program prints out `123`"
+        "**Q4**: Fill in the blank below so that the program prints out `7`"
       ],
       "metadata": {
         "id": "afwjhiazRIM5"
@@ -108,7 +108,11 @@
     {
       "cell_type": "code",
       "source": [
-        "my_dict = {'A': 100, 'B': 23, 'C': 103, 'D': 333, 'E': 1000}\n",
+        "chars = ['A','A','B','A','B','A','C','E','D','A','B','C']\n",
+        "my_dict = {'A': 0, 'B': 0, 'C': 0, 'D': 0, 'E': 0}\n",
+        "\n",
+        "for char in chars:\n",
+        "  my_dict[char] = my_dict.get(char,0) + 1\n",
         "\n",
         "print(my_dict[__] + my_dict[__])"
       ],
@@ -142,7 +146,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q6**: Fill in the blank so that the program output as shown below.\n",
+        "**Q6**: Fill in the blank so that the program outputs as shown below.\n",
         "\n",
         "Example of output:\n",
         "```\n",
@@ -179,7 +183,55 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q7**: Circle's properties\n",
+        "**Q7**: Fill in the blank so that the program outputs `A D F`\n"
+      ],
+      "metadata": {
+        "id": "TtvGPZZFhDM_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_string = 'A-B-C-D-E-F'\n",
+        "print(my_string[__], my_string[__], my_string[__])"
+      ],
+      "metadata": {
+        "id": "L32AqGlnhRMK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q8**: Fill in the blank to calculate $\\sum_{i=0}^{n-1}(x_i+y_i)$, where $x$ and $y$ is a list of numbers."
+      ],
+      "metadata": {
+        "id": "HDQbEhfChypt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = [1,2,3,4,5]\n",
+        "y = [3,4,3,5,-1]\n",
+        "\n",
+        "total = 0\n",
+        "for____________________________\n",
+        "   ____________________________\n",
+        "\n",
+        "print(total) #Total should be [4, 6, 6, 9, 4]"
+      ],
+      "metadata": {
+        "id": "smxRrrBMiGVs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q9**: Circle's properties\n",
         "\n",
         "Implement a function called `circle_properties(radius)` that takes the radius of a circle as input and returns the area and circumference of the circle.\n",
         "\n",
@@ -220,7 +272,7 @@
         "\n",
         "def main():\n",
         "  radius = float(input(\"Enter the radius: \"))\n",
-        "  area, circumference = circle_properties(radius)\n",
+        "  # call circle_properties(radius) below\n",
         "\n",
         "\n",
         "\n",
@@ -235,15 +287,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q8**: Count Vowel\n",
+        "**Q10**: Count Vowel\n",
         "\n",
-        "Write a program to count the numbers of vowels (a, e, i, o, u) in a sentence.\n",
+        "Write a function `count_vowel(sentence)` to count the number of vowels (a, e, i, o, u) in a sentence.\n",
         "\n",
-        "Input:\n",
+        "**Input**:\n",
         "* A string. The sentence.\n",
         "\n",
-        "Output:\n",
+        "**Output**:\n",
         "* An integer. The numbers of vowels.\n",
+        "\n",
+        "**Note**:\n",
+        "* `count_vowel(sentence)` takes in **one** string and return **one** number (integer) for the number of vowels.\n",
         "\n",
         "Example 1:\n",
         "```\n",
@@ -270,7 +325,15 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "# implement your function below\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  # Get the input from the user and call the function here\n",
+        "\n",
+        "  # print out the result here\n",
+        "\n",
+        "main()"
       ],
       "metadata": {
         "id": "DainorC4LTwQ"
@@ -281,7 +344,67 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q9**: Adding two vectors (2 points)\n",
+        "**Q11**: How many www .com?\n",
+        "\n",
+        "Implement a function `count_web` that takes in a list of strings and return the number of string that start with `www` and ends with `.com`.\n",
+        "\n",
+        "**Input (from the main)**:\n",
+        "- A list of strings\n",
+        "\n",
+        "**Output**\n",
+        "- One integer\n",
+        "\n",
+        "**Note**:\n",
+        "- The tests are in the `main` function do not change.\n",
+        "\n",
+        "Example 1:\n",
+        "```\n",
+        "function call: count_web(['a','b','c','d','e'])\n",
+        "return: 0\n",
+        "```\n",
+        "Example 2:\n",
+        "```\n",
+        "function call: count_web(['www.sdf.com','www.vvv.com','ww.sdf.com','www.kkk.co','www.www.com'])\n",
+        "return: 3\n",
+        "```\n",
+        "Example 3:\n",
+        "```\n",
+        "function call: count_web(['www.com','awww.aaa.coma','bbwww.sdf.com','www.sdf.coms','w.w.w.c.o.m','www.ttt.com'])\n",
+        "return: 2\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "qIpDdo0Uc2SR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def count_web(strings):\n",
+        "  # fill in your code here\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  print(count_web(['a','b','c','d','e']))  # The answer is 0\n",
+        "\n",
+        "  print(count_web(['www.sdf.com','www.vvv.com','ww.sdf.com','www.kkk.co','www.www.com'])) # 3\n",
+        "\n",
+        "  print(count_web(['www.com','awww.aaa.coma','bbwww.sdf.com','www.sdf.coms','w.w.w.c.o.m','www.ttt.com'])) # 2\n",
+        "\n",
+        "main()"
+      ],
+      "metadata": {
+        "id": "33ntT8uWdqj0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q12**: Adding two vectors\n",
         "\n",
         "Write a program to add two vectors of size $n$ together.\n",
         "\n",
@@ -291,6 +414,8 @@
         "\n",
         "**Output**:\n",
         "* A list of length $n$.\n",
+        "\n",
+        "**Hint:** You must convert string to a list of string and then each number (in string) to int. (See Q6 for some idea)\n",
         "\n",
         "\n",
         "Example 1:\n",
@@ -334,7 +459,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q10**: Standard Deviation (2 points)\n",
+        "**Q13**: Standard Deviation\n",
         "\n",
         "Write a program to calculate a standard deviation of a given data.\n",
         "\n",
@@ -407,7 +532,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q11**: Number of Good Pairs\n",
+        "**Q14**: Number of Good Pairs\n",
         "\n",
         "Given a list of integers nums, return the number of good pairs.\n",
         "\n",
