--- a/Lab_2.ipynb
+++ b/Lab_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6oVSMe7173wa28LBl8mGg",
+      "authorship_tag": "ABX9TyOXX66yF8B3/2m3rRrlfNry",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -404,7 +404,62 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q12**: Adding two vectors\n",
+        "**Q12**: Even and Odd lists\n",
+        "\n",
+        "Given a list of integers nums, return two lists. The first list contains all even numbers in the given list in order and the second list contains all odd numbers in the given list in order.\n",
+        "\n",
+        "Examples:\n",
+        "\n",
+        "Ex1:\n",
+        "```\n",
+        "Function call: even_odd([1,2,3,1,1,3])\n",
+        "Return: ([2], [1, 3, 1, 1, 3])\n",
+        "```\n",
+        "\n",
+        "Ex2:\n",
+        "```\n",
+        "Function call: even_odd([1,2,3,3,2,1])\n",
+        "Return: ([2, 2], [1, 3, 3, 1])\n",
+        "```\n",
+        "\n",
+        "Ex3:\n",
+        "```\n",
+        "Function call: even_odd([2])\n",
+        "Return: ([2], [])\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "GEyX6k40HHJE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "sqeLwDw9GdZ2"
+      },
+      "outputs": [],
+      "source": [
+        "def even_odd(numbers):\n",
+        "  # Fill in your code here\n",
+        "\n",
+        "  return\n",
+        "\n",
+        "def main():\n",
+        "  ## Test cases below ##\n",
+        "  print(even_odd([1,2,3,1,1,3])) # == ([2], [1, 3, 1, 1, 3])\n",
+        "  print(even_odd([1,1,1,1]))     # == ([], [1, 1, 1, 1])\n",
+        "  print(even_odd([1,2,3]))       # == ([2], [1, 3])\n",
+        "  print(even_odd([1,2,3,3,2,1])) # == ([2, 2], [1, 3, 3, 1])\n",
+        "  print(even_odd([2]))           # == ([2], [])\n",
+        "\n",
+        "main()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q13**: Adding two vectors\n",
         "\n",
         "Write a program to add two vectors of size $n$ together.\n",
         "\n",
@@ -459,7 +514,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q13**: Standard Deviation\n",
+        "**Q14**: Standard Deviation\n",
         "\n",
         "Write a program to calculate a standard deviation of a given data.\n",
         "\n",
@@ -528,64 +583,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Q14**: Number of Good Pairs\n",
-        "\n",
-        "Given a list of integers nums, return the number of good pairs.\n",
-        "\n",
-        "A pair $\\texttt{(i, j)}$ is called good if $\\texttt{nums[i] == nums[j] and i < j}$.\n",
-        "\n",
-        "\n",
-        "Examples:\n",
-        "\n",
-        "Ex1:\n",
-        "```\n",
-        "Function call: good_pairs([1,2,3,1,1,3])\n",
-        "Return: 4\n",
-        "```\n",
-        "Explanation: There are 4 good pairs (0,3), (0,4), (3,4), (2,5) 0-indexed.\n",
-        "\n",
-        "Ex2:\n",
-        "```\n",
-        "Function call: good_pairs([1,1,1,1])\n",
-        "Return: 6\n",
-        "```\n",
-        "Explanation: Each pair in the array are good.\n",
-        "\n",
-        "Ex3:\n",
-        "```\n",
-        "Function call: good_pairs([1,2,3])\n",
-        "Return: 0\n",
-        "```"
-      ],
-      "metadata": {
-        "id": "GEyX6k40HHJE"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "sqeLwDw9GdZ2"
-      },
-      "outputs": [],
-      "source": [
-        "def good_pairs(nums):\n",
-        "  # Fill in your code here\n",
-        "\n",
-        "  return\n",
-        "\n",
-        "def main():\n",
-        "  ## Test cases below ##\n",
-        "  good_pairs([1,2,3,1,1,3]) # == 4\n",
-        "  good_pairs([1,1,1,1])     # == 6\n",
-        "  good_pairs([1,2,3])       # == 0\n",
-        "  good_pairs([1,2,3,3,2,1]) # == 3\n",
-        "  good_pairs([1])           # == 0"
-      ]
     }
   ]
 }
