--- a/Project_Tic_Tac_Toe.ipynb
+++ b/Project_Tic_Tac_Toe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOn/jT9tp/Tigmsc3wpaNcE",
+      "authorship_tag": "ABX9TyPu3kcDqiT3qT7uPOzFESrl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,8 @@
         "\n",
         "What you need to implement for this question are as follows.\n",
         "\n",
+        "0) Setup: `'_'` is an empty space. `'X'` is the first player. `'O'` is the second player. We will use a 2D list to represent the game board. The initial board would be `board = [['_','_','_'],['_','_','_'],['_','_','_']]`.\n",
+        "\n",
         "1) A function `main` as the main game loop to run the game.\n",
         "\n",
         "- Initialization.\n",
@@ -51,73 +53,65 @@
         "- print the final board\n",
         "- print the result\n",
         "\n",
-        "2) Setup: `'_'` is an empty space. `'X'` is the first player. `'O'` is the second player. We will use a 2D list to represent the game board. The initial board would be `board = [['_','_','_'],['_','_','_'],['_','_','_']]`.\n",
-        "\n",
-        "3) A function `print_board(board)` to print the board from the given 2d list. If you finish early, consider print the board more beautifully.\n",
+        "2) A function `print_board(board)` to print the board from the given 2d list. If you finish early, consider print the board more beautifully.\n",
         "\n",
         "Example:\n",
         "```\n",
-        "board = [['_','X','_'],['_','O','_'],['_','_','X']]\n",
-        "print_board(board)\n",
+        "test_board = [['_','X','_'],['_','O','_'],['_','_','X']]\n",
+        "print_board(test_board)\n",
         "['_','X','_']\n",
         "['_','O','_']\n",
         "['_','_','X']\n",
         "```\n",
         "\n",
-        "4) A function `check_winner(board)` to determine the winner ('X', 'O', or 'None'). Check horizontal and vertical using for-loop.\n",
+        "3) A function `check_winner(board)` to determine the winner ('X', 'O', or 'None'). Check horizontal and vertical using for-loop.\n",
         "\n",
         "Examples:\n",
         "```\n",
-        "board = [['_','X','_'],['_','O','_'],['_','_','X']]\n",
-        "check_winner(board)\n",
+        "test_board = [['_','X','_'],['_','O','_'],['_','_','X']]\n",
+        "check_winner(test_board)\n",
         "'None'\n",
         "```\n",
         "\n",
         "```\n",
-        "board = [['X','X','X'],['_','O','O'],['_','_','_']]\n",
-        "check_winner(board)\n",
+        "test_board = [['X','X','X'],['_','O','O'],['_','_','_']]\n",
+        "check_winner(test_board)\n",
         "'X'\n",
         "```\n",
         "\n",
         "```\n",
-        "board = [['X','X','_'],['O','O','O'],['X','X','_']]\n",
-        "check_winner(board)\n",
+        "test_board = [['X','X','_'],['O','O','O'],['X','X','_']]\n",
+        "check_winner(test_board)\n",
         "'O'\n",
         "```\n",
         "\n",
         "```\n",
-        "board = [['X','_','_'],['_','X','_'],['O','O','X']]\n",
-        "check_winner(board)\n",
+        "test_board = [['X','_','_'],['_','X','_'],['O','O','X']]\n",
+        "check_winner(test_board)\n",
         "'X'\n",
         "```\n",
         "\n",
-        "5) A function `is_empty(board)` to check whether there is an empty space. Use for loop.\n",
+        "4) A function `is_empty(board)` to check whether there is an empty space. Use for loop.\n",
         "\n",
         "Examples:\n",
         "```\n",
-        "board = [['X','_','_'],['_','X','_'],['O','O','X']]\n",
-        "is_empty(board)\n",
+        "test_board = [['X','_','_'],['_','X','_'],['O','O','X']]\n",
+        "is_empty(test_board)\n",
         "True\n",
         "```\n",
         "\n",
         "```\n",
-        "board = [['X','O','X'],['X','X','O'],['O','O','X']]\n",
-        "is_empty(board)\n",
+        "test_board = [['X','O','X'],['X','X','O'],['O','O','X']]\n",
+        "is_empty(test_board)\n",
         "False\n",
         "```\n",
         "\n",
-        "6) A function `get_next_move()` to get the next move and return two numbers, row and column of the next move.\n",
+        "5) A function `get_next_move()` to get the next move from the user and return **two numbers**, row and column of the next move.\n",
         "The program will only ask the user for one input, both row and column, from the user.\n",
         "  ```\n",
         "  Enter the next X's move: 0 0\n",
         "  ```\n",
-        "This function will validate that the next move is valid. There are two conditions that you need to check.\n",
-        "- row and column are between 0 and 2.\n",
-        "- The location is empty.\n",
         "\n",
-        "If the user's input is invalid, print out `Your input is invalid` and ask the user to input a new move.\n",
-        "\n",
-        "**Consider implement this function without any validation check first.**\n",
         "\n",
         "**Recommendations**\n",
         "- Implement and test each function one by one.\n",
@@ -130,7 +124,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# print_board function\n"
+        "test_board = [['_','_','_'],['_','_','_'],['_','_','_']] # for testing your function\n",
+        "\n",
+        "# print_board function\n",
+        "\n"
       ],
       "metadata": {
         "id": "Zupz5xziGCpq"
@@ -141,6 +138,8 @@
     {
       "cell_type": "code",
       "source": [
+        "test_board = [['X','X','X'],['_','O','O'],['_','_','_']] # for testing your function\n",
+        "\n",
         "# check_winner function\n"
       ],
       "metadata": {
@@ -152,6 +151,8 @@
     {
       "cell_type": "code",
       "source": [
+        "test_board = [['X','O','X'],['X','X','O'],['O','O','X']] # for testing your function\n",
+        "\n",
         "# is_empty function\n"
       ],
       "metadata": {
