--- a/Lab_2.ipynb
+++ b/Lab_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXX66yF8B3/2m3rRrlfNry",
+      "authorship_tag": "ABX9TyMfSjAgixNAQoN+ouIcIJYN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -404,27 +404,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q12**: Even and Odd lists\n",
+        "**Q12**: two and three lists\n",
         "\n",
-        "Given a list of integers nums, return two lists. The first list contains all even numbers in the given list in order and the second list contains all odd numbers in the given list in order.\n",
+        "Given a list of integers nums, return two lists. The first list contains all numbers that divided by two in the given list in order. The second list contains all numbers that divided by three in the given list in order.\n",
         "\n",
         "Examples:\n",
         "\n",
         "Ex1:\n",
         "```\n",
-        "Function call: even_odd([1,2,3,1,1,3])\n",
-        "Return: ([2], [1, 3, 1, 1, 3])\n",
+        "Function call: two_three([1,2,3,1,1,3])\n",
+        "Return: ([2], [3, 3])\n",
         "```\n",
         "\n",
         "Ex2:\n",
         "```\n",
-        "Function call: even_odd([1,2,3,3,2,1])\n",
-        "Return: ([2, 2], [1, 3, 3, 1])\n",
+        "Function call: two_three([12,2,3,3,2,6,4,8,9])\n",
+        "Return: ([12, 2, 2, 6, 4, 8], [12, 3, 3, 6, 9])\n",
         "```\n",
         "\n",
         "Ex3:\n",
         "```\n",
-        "Function call: even_odd([2])\n",
+        "Function call: two_three([2])\n",
         "Return: ([2], [])\n",
         "```\n"
       ],
@@ -440,18 +440,17 @@
       },
       "outputs": [],
       "source": [
-        "def even_odd(numbers):\n",
+        "def two_three(numbers):\n",
         "  # Fill in your code here\n",
         "\n",
         "  return\n",
         "\n",
         "def main():\n",
         "  ## Test cases below ##\n",
-        "  print(even_odd([1,2,3,1,1,3])) # == ([2], [1, 3, 1, 1, 3])\n",
-        "  print(even_odd([1,1,1,1]))     # == ([], [1, 1, 1, 1])\n",
-        "  print(even_odd([1,2,3]))       # == ([2], [1, 3])\n",
-        "  print(even_odd([1,2,3,3,2,1])) # == ([2, 2], [1, 3, 3, 1])\n",
-        "  print(even_odd([2]))           # == ([2], [])\n",
+        "  print(two_three([1,2,3,1,1,3])) # == ([2], [3, 3])\n",
+        "  print(two_three([1,1,1]))       # == ([], [])\n",
+        "  print(two_three([12,2,3,3,2,6,4,8,9])) # == ([12, 2, 2, 6, 4, 8], [12, 3, 3, 6, 9])\n",
+        "  print(two_three([2]))           # == ([2], [])\n",
         "\n",
         "main()"
       ]
