--- a/Lab_2.ipynb
+++ b/Lab_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfSjAgixNAQoN+ouIcIJYN",
+      "authorship_tag": "ABX9TyOko0HPmyVPlz4g9b/9Nff2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,7 +204,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q8**: Fill in the blank to calculate $\\sum_{i=0}^{n-1}(x_i+y_i)$, where $x$ and $y$ is a list of numbers."
+        "**Q8**: Fill in the blank to calculate a sum of two lists $x+y$, where $x$ and $y$ is a list of numbers."
       ],
       "metadata": {
         "id": "HDQbEhfChypt"
@@ -216,7 +216,7 @@
         "x = [1,2,3,4,5]\n",
         "y = [3,4,3,5,-1]\n",
         "\n",
-        "total = 0\n",
+        "total = [0,0,0,0,0]\n",
         "for____________________________\n",
         "   ____________________________\n",
         "\n",
